# okopilote-room

./: LICENSE  README.md  TODO  pyproject.toml
examples/: devices.conf  room.conf  rooms.conf
examples/room-data/: bedroom2_scheduler.json  bedroom3.json  bedroom3_scheduler.json  common_scheduler.json  livingroom_scheduler.json
examples/systemd/: okopilote-room.service
src/okopilote/room/: api.py  app.py  entry_point.py  exceptions.py  room.py  scheduler.py
tests/: __init__.py
